--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,6 +1,7 @@
 ---
 - name: tower Hello World Message
   hosts: all
+  user: root
   tasks:
     - name: Hello Message
       debug: msg="Hello World! {{ ansible_user }}"
